--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <img id="image" src="イラスト1.jpg" alt="占い画像">
         </div>
         <div class="fortune">
-            <h2><img src="ノコトロゴ">今日の占い</h2>
+            <h2><img src="ノコトロゴ" width="80" height="80">今日の占い</h2>
             <p id="fortune-text">結果がここに表示されます。</p>
         </div>
         <button id="fortune-button" onclick="spinRoulette()">💖 占う 💖</button>
