--- a/index.html
+++ b/index.html
@@ -5,6 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>パラパラ占い</title>
     <link rel="stylesheet" href="styles.css">
+    <style>
+        .button-container {
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin-top: 20px;
+        }
+        #fortune-button {
+            cursor: pointer;
+            width: 150px;
+            height: auto;
+        }
+    </style>
 </head>
 <body>
     <div class="container">
@@ -12,10 +25,12 @@
             <img id="image" src="イラスト1.jpg" alt="占い画像">
         </div>
         <div class="fortune">
-            <h1><img src="ノコトロゴ.png" width="80" height="80">占いノコト</h1>
+            <h1><img src="ノコトロゴ.png" width="80" height="80">占いのコト</h1>
             <p id="fortune-text">結果がここに表示されます。</p>
         </div>
-        <button id="fortune-button" onclick="spinRoulette()">💖 占う 💖</button>
+        <div class="button-container">
+            <img id="fortune-button" src="button.png" alt="占うボタン" onclick="spinRoulette()">
+        </div>
     </div>
     
     <script>
@@ -27,11 +42,11 @@
             "「新しいチャンスが訪れそう！アンテナを張ってみよう。」とのこと",
             "「直感が冴える日。迷ったら心の声に従ってみて。」とのこと",
             "「一歩ずつ着実に進むことが成功のカギ。焦らずマイペースで！」とのこと",
-            "「小さな幸せを大切に。心がほっこりする出来事があるかも。」とのこと",
+            "」とのこと",
             "「今日はリラックスが大事。深呼吸して、心を整えよう。」とのこと",
             "「少しスローペースな一日。でも、それも大切な時間！」とのこと",
             "「無理をしなくても大丈夫。あなたのペースで進めばOK!」とのこと",
-            "「ちょっとしたハプニングも、視点を変えれば良い経験に！」とのこと",
+            "「ちょっとしたハプニングも、視点を変えれば良い経験に!」とのこと",
             "「思い通りにいかない時は、休憩のサインかも。ゆっくりしよう。」とのこと",
             "「誰かの言葉に振り回されないで。あなたの信じる道を進めばOK!」とのこと",
             "「頑張りすぎないことが今日のポイント。適度に力を抜こう。」とのこと",
