--- a/index.html
+++ b/index.html
@@ -46,11 +46,12 @@
             <img id="image" src="イラスト1.jpg" alt="占い画像">
         </div>
         <div class="fortune">
-            <h2><img src="ノコトロゴ.png">占いノコト</h2>
+            <h2><img src="ノコトロゴ.png" width="70" height="70">占いノコト</h2>
             <p id="fortune-text">結果がここに表示されます。</p>
         </div>
         <div class="button-container">
-            <img id="fortune-button" src="スタートボタン.png" alt="占うボタン" onclick="spinRoulette()">
+            <img id="fortune-button" src="スタートボタン.png" height="60
+            " alt="占うボタン" onclick="spinRoulette()">
         </div>
     </div>
     
