--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 <body>
     <div class="container">
         <div class="roulette">
-            <img id="image" src="イラスト1.jpg" alt="占い画像">
+            <img id="image" src="イラスト1.jpg" width="301" height="127" alt="占い画像">
         </div>
         <div class="fortune">
             <h2>今日の占い</h2>
