--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             <img id="image" src="イラスト1.jpg" width="301" height="127" alt="占い画像">
         </div>
         <div class="fortune">
-            <h2>今日の占い</h2>
+            <h2><img src="ノコトロゴ.png" width="60" height="60">占いノコト</h2>
             <p id="fortune-text">結果がここに表示されます。</p>
         </div>
         <div class="button-container">
@@ -59,21 +59,21 @@
     <script>
         const images = ["イラスト1.jpg", "イラスト2.jpg", "イラスト3.jpg", "イラスト4.jpg", "イラスト5.jpg", "イラスト6.jpg"];
         const fortunes = [
-            "今日は何をやってもうまくいく一日！自信を持って進もう！",
-            "嬉しいサプライズが待っているかも！ワクワクしながら過ごしてみて。",
-            "あなたの魅力が最大限に輝く日。笑顔を大切に！",
-            "新しいチャンスが訪れそう！アンテナを張ってみよう。",
-            "直感が冴える日。迷ったら心の声に従ってみて。",
-            "一歩ずつ着実に進むことが成功のカギ。焦らずマイペースで！",
-            "小さな幸せを大切に。心がほっこりする出来事があるかも。",
-            "今日はリラックスが大事。深呼吸して、心を整えよう。",
-            "少しスローペースな一日。でも、それも大切な時間！",
-            "無理をしなくても大丈夫。あなたのペースで進めばOK！",
-            "ちょっとしたハプニングも、視点を変えれば良い経験に！",
-            "思い通りにいかない時は、休憩のサインかも。ゆっくりしよう。",
-            "誰かの言葉に振り回されないで。あなたの信じる道を進めばOK！",
-            "頑張りすぎないことが今日のポイント。適度に力を抜こう。",
-            "もしつまずいても、それは次の成功へのステップ。大丈夫！"
+            "「今日は何をやってもうまくいく一日！自信を持って進もう！」とのこと",
+            "「嬉しいサプライズが待っているかも！ワクワクしながら過ごしてみて。」とのこと",
+            "「あなたの魅力が最大限に輝く日。笑顔を大切に！」とのこと",
+            "「新しいチャンスが訪れそう！アンテナを張ってみよう。」とのこと",
+            "「直感が冴える日。迷ったら心の声に従ってみて。」とのこと",
+            "「一歩ずつ着実に進むことが成功のカギ。焦らずマイペースで！」とのこと",
+            "「小さな幸せを大切に。心がほっこりする出来事があるかも。」とのこと",
+            "「今日はリラックスが大事。深呼吸して、心を整えよう。」とのこと",
+            "「少しスローペースな一日。でも、それも大切な時間！」とのこと",
+            "「無理をしなくても大丈夫。あなたのペースで進めばOK!」とのこと",
+            "「ちょっとしたハプニングも、視点を変えれば良い経験に！」とのこと",
+            "「思い通りにいかない時は、休憩のサインかも。ゆっくりしよう。」とのこと",
+            "「誰かの言葉に振り回されないで。あなたの信じる道を進めばOK!」とのこと",
+            "「頑張りすぎないことが今日のポイント。適度に力を抜こう。」とのこと",
+            "「もしつまずいても、それは次の成功へのステップ。大丈夫！」とのこと"
         ];
         
         function spinRoulette() {
