--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 </head>
 <body>
     <div class="fortune-header">
-        <h2><img src="ウラナイノコト.png" alt="ロゴ" style="width: 280px; height: auto;">
+        <h2><img src="ウラナイノコト.png" alt="ロゴ" style="width: max-content; height: auto;">
         </h2>
     </div>
     <div class="container">
