--- a/index.html
+++ b/index.html
@@ -83,24 +83,24 @@
     </div>
     
     <script>
-        const images = ["01えり枠あり.jpg", "02えり枠あり.jpg", "03えり枠あり.jpg", "04えり枠あり.jpg", "05えり枠あり.jpg"];
+        const images = ["01えり枠あり.jpg", "02えり枠あり.jpg", "03えり枠あり.jpg", "04えり枠あり.jpg", "05えり枠あり.jpg","06えりりん枠あり.jpg","07えりりん枠あり.jpg","08えりりん枠あり.jpg","09えりりん枠あり.jpg","10えりりん枠あり.jpg","川瀬枠あり01.jpg","川瀬枠あり02.jpg","川瀬枠あり03.jpg"];
         const fortunes = [
-            "「今日は何をやっても\nうまくいく一日!\n自信を持って進もう!」\nとのこと",
-            "「嬉しいサプライズが\n待っているかも!\nワクワクして過ごそう。」\nとのこと",
-            "「あなたの魅力が\n最大限に輝く日。\n笑顔を大切に!」\nとのこと",
-            "「新しいチャンスが\n訪れそう!\nアンテナを張ってみよう。」\nとのこと",
-            "「直感が冴える日。\n迷ったら心の声に\n従ってみて。」\nとのこと",
-            "「一歩ずつ着実に\n進むことが成功のカギ。\n焦らずマイペースで!」\nとのこと",
-            "「小さな幸せを\n大切にすることで\n大きな幸運がくる!」\nとのこと",
-            "「今日はリラックスが\n大事な日。\n深呼吸して整えよう。」\nとのこと",
-            "「少しスローペースな\n一日。でもそれも\n大切な時間!」\nとのこと",
-            "「無理をしなくても\n大丈夫。あなたの\nペースで進めばOK!」\nとのこと",
-            "「ちょっとしたハプニング\nも視点を変えれば\n良い経験に!」\nとのこと",
-            "「思い通りにいかない時\nは休憩のサインかも。\nゆっくりしよう。」\nとのこと",
-            "「誰かの言葉に\n振り回されないで。\n信じる道を進めばOK!」\nとのこと",
-            "「頑張りすぎないことが\n今日のポイント。\n適度に力を抜こう。」\nとのこと",
-            "「もしつまずいても\nそれは次の成功への\nステップ。大丈夫!」\nとのこと",
-            "「ポジティブな気持ちが\n幸運を引き寄せる。\n笑顔で過ごそう!」\nとのこと"
+            "「今日は何をやっても\nうまくいく一日!\n自信を持って進もう!」",
+            "「嬉しいサプライズが\n待っているかも!\nワクワクして過ごそう。」",
+            "「あなたの魅力が\n最大限に輝く日。\n笑顔を大切に!」",
+            "「新しいチャンスが\n訪れそう!\nアンテナを張ってみよう。」",
+            "「直感が冴える日。\n迷ったら心の声に\n従ってみて。」",
+            "「一歩ずつ着実に\n進むことが成功のカギ。\n焦らずマイペースで!」",
+            "「小さな幸せを\n大切にすることで\n大きな幸運がくる!」",
+            "「今日はリラックスが\n大事な日。\n深呼吸して整えよう。」",
+            "「少しスローペースな\n一日。でもそれも\n大切な時間!」",
+            "「無理をしなくても\n大丈夫。あなたの\nペースで進めばOK!」",
+            "「ちょっとしたハプニング\nも視点を変えれば\n良い経験に!」",
+            "「思い通りにいかない時\nは休憩のサインかも。\nゆっくりしよう。」",
+            "「誰かの言葉に\n振り回されないで。\n信じる道を進めばOK!」",
+            "「頑張りすぎないことが\n今日のポイント。\n適度に力を抜こう。」",
+            "「もしつまずいても\nそれは次の成功への\nステップ。大丈夫!」",
+            "「ポジティブな気持ちが\n幸運を引き寄せる。\n笑顔で過ごそう!」"
         ];
         
         let interval;
@@ -147,7 +147,7 @@
     </script>
 
 <!-- JavaScriptファイルを読み込む -->
-<!-- <script src="script.js"></script> -->
+<script src="script.js"></script>
 
 </body>
 </html>
