--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     </div>
     
     <script>
-        const images = ["01えり枠あり.jpg", "02えり枠あり.jpg", "03えり枠あり.jpg", "04えり枠あり.jpg", "05えり枠あり.jpg","06えりりん枠あり.jpg","07えりりん枠あり.jpg","08えりりん枠あり.jpg","09えりりん枠あり.jpg","10えりりん枠あり.jpg","川瀬枠あり01.jpg","川瀬枠あり02.jpg","川瀬枠あり03.jpg"];
+        const images = ["01えり枠あり.jpg", "02えり枠あり.jpg", "03えり枠あり.jpg", "04えり枠あり.jpg", "05えり枠あり.jpg","06えりりん枠あり.jpg","07えりりん枠あり.jpg","08えりりん枠あり.jpg","09えりりん枠あり.jpg","10えりりん枠あり.jpg","川瀬枠あり01.jpg","川瀬枠あり02.jpg","川瀬枠あり03.jpg","久々江枠あり01.jpg","久々江枠あり02.jpg","久々江枠あり03.jpg"];
         const fortunes = [
             "「今日は何をやっても\nうまくいく一日!\n自信を持って進もう!」", 
             "「嬉しいサプライズが\n待っているかも!\nワクワクして過ごそう。」", 
