--- a/index.html
+++ b/index.html
@@ -120,7 +120,9 @@
         ];
     
         const specialImages = ["ハナシテ01.jpg", "ハナシテ02.jpg", "ハナシテ03.jpg"];
-        const specialFortunes = ["ハナシテノモリ１", "ハナシテノモリ２", "ハナシテノモリ３"];
+        const specialFortunes = ["「低いところを狙えば\n願いやすく\n叶いやすくなります」", 
+                                 "「刺激は\n受けておいたほうがいい\nいずれ慣れるから」", 
+                                 "「そんな子に育てた\n覚えはない。\nなんせ育ててないからな」"];
     
         let interval;
         let currentImageIndex = 0;
