--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     
         function spinRoulette() {
             if (hasPlayedToday()) {
-                alert("今日はもう占いました！また明日お試しください。");
+                alert("今日はもう占いました！明日もやってネ！");
                 return;
             }
             
