--- a/index.html
+++ b/index.html
@@ -98,7 +98,8 @@
             "川瀬枠あり03.jpg", "久々江枠あり01.jpg", "久々江枠あり02.jpg",
             "久々江枠あり03.jpg", "近藤枠あり01.jpg", "近藤枠あり02.jpg",
             "近藤枠あり03.jpg", "ハナシテ01.jpg", "ハナシテ02.jpg", "ハナシテ03.jpg",
-            "レオ枠あり01.jpg","レオ枠あり02.jpg","レオ枠あり03.jpg"
+            "レオ枠あり01.jpg","レオ枠あり02.jpg","レオ枠あり03.jpg","レオ画伯の近藤画像.jpg",
+            "近藤画伯のレオ画像.jpg","川瀬画伯えり画像.jpg","えり画伯川瀬画像.jpg","ハナシテ自画像.jpg","久々江自画像.jpg",
         ];
     
         const fortunes = [
